404 and wrap fix for warns

--- a/_sass/hydeout/_message.scss
+++ b/_sass/hydeout/_message.scss
@@ -18,6 +18,8 @@
   border-radius: 5px;
   padding-left: 50px;
   position: relative;
+  display:block;
+  word-wrap:break-word;
 }
 
 .warn:before {
